<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.TimeZoneFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/alarm_item_height"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/time_zone_country_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/padding20"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/time_zone_country_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timezone_country"
                    android:textSize="@dimen/text_large"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/time_zone_country_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_zone_empty"
                    android:textSize="@dimen/text_small"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintTop_toBottomOf="@id/time_zone_country_title"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider0"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginStart="@dimen/padding20"
                android:layout_marginEnd="@dimen/padding20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_zone_country_layout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/time_zone_region_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/padding20"
                app:layout_constraintTop_toBottomOf="@id/divider0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/time_zone_region_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timezone_region"
                    android:textSize="@dimen/text_large"
                    android:textColor="?android:attr/textColorPrimary"
                    android:duplicateParentState="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/time_zone_region_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_zone_empty"
                    android:textSize="@dimen/text_small"
                    android:textColor="?android:attr/textColorSecondary"
                    android:duplicateParentState="true"
                    app:layout_constraintTop_toBottomOf="@id/time_zone_region_title"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginStart="@dimen/padding20"
                android:layout_marginEnd="@dimen/padding20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_zone_region_layout" />

            <TextView
                android:id="@+id/time_zone_change_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small"
                android:textColor="?android:attr/textColorPrimary"
                android:gravity="start"
                android:lineSpacingExtra="@dimen/padding5"
                android:layout_marginTop="@dimen/padding20"
                android:layout_marginStart="@dimen/padding20"
                android:layout_marginEnd="@dimen/padding20"
                app:layout_constraintTop_toBottomOf="@id/divider1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding20"
        android:layout_gravity="center|bottom"
        android:gravity="center"
        android:textColor="?attr/colorPrimary"
        app:iconTint="?attr/colorPrimary"
        app:backgroundTint="@color/background"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>