<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search_timezone"
        android:title="@string/search_title"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />
</menu>