...
    android:paddingStart="@dimen/padding20"
    android:paddingEnd="@dimen/padding20"
    android:background="?attr/selectableItemBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/time_zone_picker_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_middle"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
...
