...
        <item>Phnom Penh</item>
        <item>Pyongyang</item>
        <item>Qatar</item>
        <item>Rangoon</item>
        <item>Riyadh</item>
        <item>Saigon</item>
        <item>Seoul</item>
        <item>Shanghai</item>
        <item>Singapore</item>
        <item>Taipei</item>
        <item>Tehran</item>
        <item>Tel Aviv</item>
        <item>Tokyo</item>
...
