<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_list"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.WorldClockFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_date_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding10"
            android:paddingBottom="@dimen/padding10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/world_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_clock_size"
                android:includeFontPadding="false"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/world_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_middle"
                android:paddingTop="@dimen/padding5"
                android:paddingBottom="@dimen/padding5"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/world_time" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/time_zone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding5"
                android:paddingBottom="@dimen/padding5"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/world_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/time_zone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:textSize="@dimen/text_middle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:elevation="100dp"
            app:layout_constraintTop_toBottomOf="@id/main_date_time_layout"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/clockList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/alarm_item_height"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <Button
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:textColor="@color/blueGrayDarker"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/list_empty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/clock_empty"
            android:visibility="gone"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_timezone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="center|bottom"
        android:contentDescription="@string/world_clock"
        app:tint="?attr/colorPrimary"
        app:backgroundTint="@color/background"
        app:srcCompat="@drawable/ic_action_world_white"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>