...
    <!-- Show info -->
    <string name="alarm_empty">Empty</string>
    <string name="clock_empty">Empty</string>
    <string name="no_result">No Result</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="turn_off">Turn Off</string>
    <string name="select_timezone">Time zone</string>
    <string name="select_ringtone">Ringtone</string>
    <string name="select_vibration">Vibration</string>
    <string name="select_snooze">Snooze</string>
    <string name="no_ringtone">No Ringtone</string>
...
    <string name="time_zone_no_dst_msg">%1$s doesn\'t use Daylight Saving Time.</string>
    <string name="time_zone_dst_resolve_error_msg">%1$s uses Summer Time, but could not resolve information. Please try again later.</string>

    <!-- Settings -->
    <string name="setting_group_0_key">GENERAL</string>
    <string name="setting_group_0">General</string>
    <string name="setting_time_zone_selector_key">TIME_ZONE_SELECTOR_KEY</string>
    <string name="setting_time_zone_selector_title">Select time zone by</string>
    <string name="setting_converter_goto_key">CONVERTER_GOTO</string>
    <string name="setting_converter_goto">Change date and time</string>
    <string name="setting_24_hr_clock_key">ENABLE_24_HOUR_CLOCK</string>
    <string name="setting_24_hr_clock_title">Enable 24 hour clock</string>

...
